# DougHub2

./: .gitignore  .pre-commit-config.yaml  README.md  doughub.db  instructions.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: API_CONTRACT.instructions.md  BACKEND_API.instructions.md  FRONT_BACK_WIRING.instructions.md  PROJECT_GUARDIAN.instructions.md  PROJECT_LEAD_GEMINI.instructions.md  UI_LAYOUT.instructions.md  copilot-instructions.md  gemini.instructions.md
.github/instructions/prompts/: 01_integrate_extraction_feature.prompt.md  02_consolidate_extraction_api.prompt.md  03_add_extraction_button.prompt.md  04_implement_button_logic.prompt.md  05_organize_extraction_output.prompt.md  06_refactor_entry_point.prompt.md  07_cleanup_boilerplate_and_routers.prompt.md  08_test_extraction_output.prompt.md  09_test_duplicate_question_prevention.prompt.md  10_add_list_questions_endpoint.prompt.md  11_add_get_question_endpoint.prompt.md  12_add_question_list_component.prompt.md  13_add_question_view_component.prompt.md  14_integrate_react_pages.prompt.md  15_document_ui_serving.prompt.md  18_remove_mock_data.prompt.md  (+14 more)
Temporary/: KeyFeatures_Notetaking.md
config/: config.yml
for_export/: extraction_server.py  question_extractor.user.js
for_export/doughub/: config.py  exceptions.py  models.py
frontend/: index.html  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
src/doughub2/: __init__.py  __main__.py  cli.py  config.py  database.py  main.py  models.py  schemas.py  util.py
tests/: test_api.py  test_util.py
(+45 files in other folders)
